--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -61,13 +61,11 @@
             app:popUpTo="@id/home_dest" />
     </fragment>
 
-    <!-- TODO STEP 4 Create a new navigation destination pointing to SettingsFragment -->
-    <!--<fragment-->
-    <!--android:id="@+id/settings_dest"-->
-    <!--android:name="com.example.android.codelabs.navigation.SettingsFragment"-->
-    <!--android:label="@string/settings"-->
-    <!--tools:layout="@layout/settings_fragment" />-->
-    <!-- TODO END STEP 4 -->
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.android.codelabs.navigation.SettingsFragment"
+        android:label="settings_fragment"
+        tools:layout="@layout/settings_fragment" />
 
     <fragment
         android:id="@+id/deeplink_dest"
@@ -84,4 +82,5 @@
 
         <!-- TODO END STEP 11.1 -->
     </fragment>
+
 </navigation>
